--- a/CrudManager/src/main/resources/templates/listar_imoveis.html
+++ b/CrudManager/src/main/resources/templates/listar_imoveis.html
@@ -39,7 +39,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown" aria-expanded="false">Proprieterário</a>
             <ul class="dropdown-menu" aria-labelledby="dropdown07">
-              <li><a class="dropdown-item" th:href="@{/users}">Listar Proprietários</a></li>
+              <li><a class="dropdown-item" th:href="@{/listar_proprietario}">Listar Proprietários</a></li>
               <li><a class="dropdown-item" th:href="@{/users/form}">Adicionar Proprietário</a></li>
             </ul>
           </li>
